cpu/gpu encode/decode

--- a/RD/walloc.ipynb
+++ b/RD/walloc.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "id": "6d7db02c-516f-4ddd-ba4a-31b7dcc18526",
    "metadata": {},
    "outputs": [],
@@ -32,12 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "id": "389e035a-effe-4599-807b-96c213e5a634",
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = \"cpu\"\n",
     "checkpoint = torch.load(\"RGB_Li_27c_J3_nf4_v1.0.2.pth\",map_location=\"cpu\",weights_only=False)\n",
     "codec_config = checkpoint['config']\n",
     "codec = walloc.Codec2D(\n",
@@ -50,13 +49,12 @@
     "    lightweight_encode = codec_config.lightweight_encode\n",
     ")\n",
     "codec.load_state_dict(checkpoint['model_state_dict'])\n",
-    "codec = codec.to(device)\n",
     "codec.eval();"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "id": "cfc6e03e-ffcc-443f-be69-f6f75ba737e6",
    "metadata": {},
    "outputs": [
@@ -64,13 +62,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: \"https://github.com/photosynthesis-team/photosynthesis.metrics/releases/download/v0.4.0/lpips_weights.pt\" to /home/dgj335/.cache/torch/hub/checkpoints/lpips_weights.pt\n",
       "/home/dgj335/.local/lib/python3.10/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
       "  warnings.warn(\n",
       "/home/dgj335/.local/lib/python3.10/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n",
-      "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to /home/dgj335/.cache/torch/hub/checkpoints/vgg16-397923af.pth\n",
-      "Downloading: \"https://github.com/photosynthesis-team/piq/releases/download/v0.4.1/dists_weights.pt\" to /home/dgj335/.cache/torch/hub/checkpoints/dists_weights.pt\n"
+      "  warnings.warn(msg)\n"
      ]
     }
    ],
@@ -81,14 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "id": "f156141c-9fed-4893-a143-02abbe802822",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3565f7503ade46fcac3d89876be415fe",
+       "model_id": "dfdf04d9a06f4f1fae93ea21195f6ba1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -102,7 +97,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "830bd96425994510944f3c98371596ec",
+       "model_id": "149c4325711a4d3f98d4de5b1a3aa730",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "id": "b911f5f0-aff8-4352-b93f-489b4e18c3b2",
    "metadata": {},
    "outputs": [],
@@ -162,7 +157,7 @@
     "        DISTS_dB = -10*np.log10(dists_loss(x.to(\"cuda\")+0.5, x_hat.to(\"cuda\")+0.5).item())        \n",
     "        \n",
     "    return {\n",
-    "        'image': rec_webp_bytes,\n",
+    "        'recovered': rec_webp_bytes,\n",
     "        'compressed': webp_bytes,\n",
     "        'encode_time': encode_time,\n",
     "        'decode_time': decode_time,\n",
@@ -176,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "id": "07a4d392-f9b7-4d92-b656-a33ecffdf2d9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dd110ab1b9b452dbeca00348e1991d2",
+       "model_id": "cde22e2826384263a4780faeeed904c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -196,43 +191,130 @@
     }
    ],
    "source": [
+    "device = \"cuda\"\n",
+    "codec = codec.to(device)\n",
     "walloc_ds = dataset.select(range(2)).map(walloc_compress)\n",
+    "walloc_ds = walloc_ds.cast_column('recovered',Image())\n",
     "walloc_ds = walloc_ds.cast_column('compressed',Image())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "ec869dee-7ac4-4ff9-9c46-250bc2f98ff0",
+   "execution_count": 12,
+   "id": "8ed7b5ec-3124-470f-86b4-359c2389e9e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def walloc_compress_cpu(sample):\n",
+    "    with torch.no_grad():\n",
+    "        img = sample['image']\n",
+    "        x = PILToTensor()(img).to(torch.float)\n",
+    "        x = (x/255 - 0.5).unsqueeze(0).to(device)\n",
+    "        H, W = x.size(2), x.size(3)\n",
+    "        x_padded = walloc.pad(x,p=8)\n",
+    "\n",
+    "        t0 = time.time()\n",
+    "        X = codec.wavelet_analysis(x_padded,codec.J)\n",
+    "        Y = codec.encoder(X)\n",
+    "        webp = walloc.latent_to_pil(Y.to(\"cpu\"),codec.latent_bits, 3)[0]\n",
+    "        buff = io.BytesIO()\n",
+    "        webp.save(buff, format='WEBP', lossless=True)\n",
+    "        webp_bytes = buff.getbuffer()\n",
+    "        encode_time = time.time() - t0\n",
+    "\n",
+    "        t0 = time.time()\n",
+    "        Y = walloc.pil_to_latent([PIL.Image.open(buff)], codec.latent_dim, codec.latent_bits, 3).to(device)\n",
+    "        X_hat = codec.decoder(Y)\n",
+    "        x_hat = codec.wavelet_synthesis(X_hat,codec.J)\n",
+    "        x_hat = codec.clamp(x_hat)\n",
+    "        decode_time = time.time() - t0\n",
+    "                \n",
+    "    return {\n",
+    "        'cpu_encode_time': encode_time,\n",
+    "        'cpu_decode_time': decode_time,\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c5ddb0a9-70c7-46c4-b8bd-83aa7eb73268",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = \"cpu\"\n",
+    "codec = codec.to(device)\n",
+    "walloc_cpu = dataset.select(range(2)).map(walloc_compress_cpu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b9537134-7bf5-4e75-aeb9-2c750cf42b2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "walloc_ds = walloc_ds.add_column('cpu_encode_time',walloc_cpu['cpu_encode_time'])\n",
+    "walloc_ds = walloc_ds.add_column('cpu_decode_time',walloc_cpu['cpu_decode_time'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e920caa3-bcac-4c03-a137-1e2a85f5aaf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'path': 'LSDIR_val/val1/HR/val/0000049.png',\n",
-       " 'image': <PIL.WebPImagePlugin.WebPImageFile image mode=RGB size=2064x1548>,\n",
-       " 'w': 2064,\n",
-       " 'h': 1548,\n",
+       "{'path': 'LSDIR_val/val1/HR/val/0000130.png',\n",
+       " 'image': <PIL.PngImagePlugin.PngImageFile image mode=RGB size=1152x768>,\n",
+       " 'w': 1152,\n",
+       " 'h': 768,\n",
        " 'mode': 'RGB',\n",
-       " 'aspect': 1.3333333333333333,\n",
-       " 'n_pixels': 3195072,\n",
-       " 'compressed': <PIL.WebPImagePlugin.WebPImageFile image mode=RGB size=774x582>,\n",
-       " 'encode_time': 0.3022124767303467,\n",
-       " 'decode_time': 2.7161335945129395,\n",
-       " 'bpp': 0.9213188309997395,\n",
-       " 'PSNR': 28.627307891845703,\n",
-       " 'MSSIM': 0.9649980664253235,\n",
-       " 'LPIPS_dB': 6.64622964799364,\n",
-       " 'DISTS_dB': 14.70931610547112}"
+       " 'aspect': 1.5,\n",
+       " 'n_pixels': 884736,\n",
+       " 'recovered': <PIL.WebPImagePlugin.WebPImageFile image mode=RGB size=1152x768>,\n",
+       " 'compressed': <PIL.WebPImagePlugin.WebPImageFile image mode=RGB size=432x288>,\n",
+       " 'encode_time': 0.08014345169067383,\n",
+       " 'decode_time': 0.006960868835449219,\n",
+       " 'bpp': 1.1057038483796295,\n",
+       " 'PSNR': 31.71041488647461,\n",
+       " 'MSSIM': 0.9848196506500244,\n",
+       " 'LPIPS_dB': 8.433589351193366,\n",
+       " 'DISTS_dB': 15.761822997039431,\n",
+       " 'cpu_encode_time': 0.1143491268157959,\n",
+       " 'cpu_decode_time': 0.3262336254119873}"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "walloc_ds[0]"
+    "walloc_ds[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c60182da-b204-47d1-836a-a890abd2fa1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "8*8*3*8/(4*16)"
    ]
   }
  ],
