--- a/RD/walloc.ipynb
+++ b/RD/walloc.ipynb
@@ -83,7 +83,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfdf04d9a06f4f1fae93ea21195f6ba1",
+       "model_id": "50312390b2ad431cbff58bd1dae5b53f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,7 +97,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "149c4325711a4d3f98d4de5b1a3aa730",
+       "model_id": "f99da178c9ad41008d88eb0ce79ae20d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -171,36 +171,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "07a4d392-f9b7-4d92-b656-a33ecffdf2d9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cde22e2826384263a4780faeeed904c2",
+       "model_id": "79817aa3c59a4127a30da4ae138a0271",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map:   0%|          | 0/2 [00:00<?, ? examples/s]"
+       "Map:   0%|          | 0/250 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dgj335/.local/lib/python3.10/site-packages/pytorch_wavelets/dwt/lowlevel.py:253: UserWarning: Plan failed with a cudnnException: CUDNN_BACKEND_EXECUTION_PLAN_DESCRIPTOR: cudnnFinalize Descriptor Failed cudnn_status: CUDNN_STATUS_NOT_SUPPORTED (Triggered internally at ../aten/src/ATen/native/cudnn/Conv_v8.cpp:919.)\n",
+      "  y = F.conv_transpose2d(lo, g0, stride=s, groups=C) + \\\n",
+      "/home/dgj335/.local/lib/python3.10/site-packages/torch/nn/modules/conv.py:456: UserWarning: Plan failed with a cudnnException: CUDNN_BACKEND_EXECUTION_PLAN_DESCRIPTOR: cudnnFinalize Descriptor Failed cudnn_status: CUDNN_STATUS_NOT_SUPPORTED (Triggered internally at ../aten/src/ATen/native/cudnn/Conv_v8.cpp:919.)\n",
+      "  return F.conv2d(input, weight, bias, self.stride,\n"
+     ]
     }
    ],
    "source": [
     "device = \"cuda\"\n",
     "codec = codec.to(device)\n",
-    "walloc_ds = dataset.select(range(2)).map(walloc_compress)\n",
+    "walloc_ds = dataset.map(walloc_compress)\n",
     "walloc_ds = walloc_ds.cast_column('recovered',Image())\n",
     "walloc_ds = walloc_ds.cast_column('compressed',Image())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "8ed7b5ec-3124-470f-86b4-359c2389e9e6",
    "metadata": {},
    "outputs": [],
@@ -237,19 +247,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "c5ddb0a9-70c7-46c4-b8bd-83aa7eb73268",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "290715626d8342a3859490f11fd84850",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/250 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "device = \"cpu\"\n",
     "codec = codec.to(device)\n",
-    "walloc_cpu = dataset.select(range(2)).map(walloc_compress_cpu)"
+    "walloc_cpu = dataset.map(walloc_compress_cpu)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "b9537134-7bf5-4e75-aeb9-2c750cf42b2c",
    "metadata": {},
    "outputs": [],
@@ -260,40 +285,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e920caa3-bcac-4c03-a137-1e2a85f5aaf4",
+   "execution_count": 10,
+   "id": "bec0be52-39cc-41f3-aeba-12bd9423d540",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'path': 'LSDIR_val/val1/HR/val/0000130.png',\n",
-       " 'image': <PIL.PngImagePlugin.PngImageFile image mode=RGB size=1152x768>,\n",
-       " 'w': 1152,\n",
-       " 'h': 768,\n",
-       " 'mode': 'RGB',\n",
-       " 'aspect': 1.5,\n",
-       " 'n_pixels': 884736,\n",
-       " 'recovered': <PIL.WebPImagePlugin.WebPImageFile image mode=RGB size=1152x768>,\n",
-       " 'compressed': <PIL.WebPImagePlugin.WebPImageFile image mode=RGB size=432x288>,\n",
-       " 'encode_time': 0.08014345169067383,\n",
-       " 'decode_time': 0.006960868835449219,\n",
-       " 'bpp': 1.1057038483796295,\n",
-       " 'PSNR': 31.71041488647461,\n",
-       " 'MSSIM': 0.9848196506500244,\n",
-       " 'LPIPS_dB': 8.433589351193366,\n",
-       " 'DISTS_dB': 15.761822997039431,\n",
-       " 'cpu_encode_time': 0.1143491268157959,\n",
-       " 'cpu_decode_time': 0.3262336254119873}"
+       "Dataset({\n",
+       "    features: ['path', 'image', 'w', 'h', 'mode', 'aspect', 'n_pixels', 'recovered', 'compressed', 'encode_time', 'decode_time', 'bpp', 'PSNR', 'MSSIM', 'LPIPS_dB', 'DISTS_dB', 'cpu_encode_time', 'cpu_decode_time'],\n",
+       "    num_rows: 250\n",
+       "})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "walloc_ds[1]"
+    "walloc_ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "22141dbd-bb6c-430b-b4b7-06276cfaf84e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6d26aeb90c6b44879dbc046ddd3a60c2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Uploading the dataset shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6318f07e0f22462aaba325e99f0c8ac1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/125 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6d93ce8af1c04dbdb08e0ea7dcbb4e5a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/2 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a986fcd09727416aa307f42f9cb7d803",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/125 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9b894dc1650347238ce8d48ceba0da37",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/2 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/RGB_Li_27c_J3_nf4_v1.0.2/commit/cecc3d6695f9aded3425ae97443614c4d0e6d353', commit_message='Upload dataset', commit_description='', oid='cecc3d6695f9aded3425ae97443614c4d0e6d353', pr_url=None, pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "walloc_ds.push_to_hub(\"danjacobellis/RGB_Li_27c_J3_nf4_v1.0.2\",split='validation')"
    ]
   }
  ],
