--- a/RD/DGML.ipynb
+++ b/RD/DGML.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "e8eb70a3-daee-40c4-9fae-d68da0031def",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "1ace4e3e-568d-4fe1-8d18-b24876cf2394",
    "metadata": {},
    "outputs": [
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "abe9a266-09f9-4bf2-97a1-9c66d3a1220f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ffe84c6182d44719d2e419d7d35fe03",
+       "model_id": "15f5611e6e3242efa8898a4b77d31a3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,7 +77,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b7fd7251b214a32833d8b98d390136c",
+       "model_id": "996e7ffa3caf4b9682fb862ecdf54fa6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -95,28 +95,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "167b3bea-6287-4933-8972-6bbffcf4ec98",
    "metadata": {},
    "outputs": [],
    "source": [
     "def DGML_compress(sample):\n",
-    "    device = \"cuda\"\n",
-    "    codec = codec.to(device)\n",
-    "    sample = dataset[28]\n",
     "    with torch.no_grad():\n",
     "        img = sample['image']\n",
     "        x = PILToTensor()(img).to(torch.float)\n",
     "        x = (x/255).unsqueeze(0).to(device)\n",
     "        H, W = x.size(2), x.size(3)\n",
-    "        x_padded = walloc.pad(x,p=16)\n",
+    "        x_padded = walloc.pad(x,p=64)\n",
     "    \n",
     "        t0 = time.time()\n",
-    "        Y = codec.g_a(x_padded).round()\n",
+    "        Y = codec.compress(x_padded)\n",
     "        encode_time = time.time() - t0\n",
     "    \n",
     "        t0 = time.time()\n",
-    "        x_hat = codec.g_s(Y)\n",
+    "        x_hat = codec.decompress(Y['strings'],Y['shape'])['x_hat']\n",
     "        x_hat = x_hat.clamp(0,1)\n",
     "        decode_time = time.time() - t0\n",
     "        \n",
@@ -126,7 +123,7 @@
     "        rec.save(buff2, format='png', lossless=True)\n",
     "        rec_png_bytes = buff2.getbuffer()\n",
     "    \n",
-    "        bpp = 1.\n",
+    "        bpp = 8*sum([sum(len(ss) for ss in s) for s in Y['strings']]) / (H*W)\n",
     "        PSNR = psnr(x,x_hat)\n",
     "        MSSIM = multi_scale_ssim(x,x_hat)\n",
     "        LPIPS_dB = -10*np.log10(lpips_loss(x.to(\"cuda\"), x_hat.to(\"cuda\")).item())\n",
@@ -147,7 +144,111 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94ca9bd5-7d2d-44a0-b8aa-b9edf3071b43",
+   "id": "fe2c068c-741b-43de-80da-cc9fd767bb4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0e337a7de4f34b6292038ee388827830",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/250 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_929725/2003570415.py:10: UserWarning: Inference on GPU is not recommended for the autoregressive models (the entropy coder is run sequentially on CPU).\n",
+      "  Y = codec.compress(x_padded)\n",
+      "/tmp/ipykernel_929725/2003570415.py:14: UserWarning: Inference on GPU is not recommended for the autoregressive models (the entropy coder is run sequentially on CPU).\n",
+      "  x_hat = codec.decompress(Y['strings'],Y['shape'])['x_hat']\n",
+      "/home/dgj335/.local/lib/python3.10/site-packages/torch/nn/modules/conv.py:456: UserWarning: Plan failed with a cudnnException: CUDNN_BACKEND_EXECUTION_PLAN_DESCRIPTOR: cudnnFinalize Descriptor Failed cudnn_status: CUDNN_STATUS_NOT_SUPPORTED (Triggered internally at ../aten/src/ATen/native/cudnn/Conv_v8.cpp:919.)\n",
+      "  return F.conv2d(input, weight, bias, self.stride,\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = \"cuda\"\n",
+    "codec = codec.to(device)\n",
+    "DGML_ds = dataset.map(DGML_compress)\n",
+    "DGML_ds = DGML_ds.cast_column('recovered',Image())\n",
+    "DGML_ds = DGML_ds.cast_column('compressed',Image())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2bf612e-8688-4d20-a429-85140747b11e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def DGML_compress_cpu(sample):\n",
+    "    with torch.no_grad():\n",
+    "        img = sample['image']\n",
+    "        x = PILToTensor()(img).to(torch.float)\n",
+    "        x = (x/255).unsqueeze(0).to(device)\n",
+    "        H, W = x.size(2), x.size(3)\n",
+    "        x_padded = walloc.pad(x,p=64)\n",
+    "    \n",
+    "        t0 = time.time()\n",
+    "        Y = codec.compress(x_padded)\n",
+    "        encode_time = time.time() - t0\n",
+    "    \n",
+    "        t0 = time.time()\n",
+    "        x_hat = codec.decompress(Y['strings'],Y['shape'])['x_hat']\n",
+    "        x_hat = x_hat.clamp(0,1)\n",
+    "        decode_time = time.time() - t0\n",
+    "        \n",
+    "    return {\n",
+    "        'cpu_encode_time': encode_time,\n",
+    "        'cpu_decode_time': decode_time,\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c471988-5753-4daf-865a-d74b5968d7cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = \"cpu\"\n",
+    "codec = codec.to(device)\n",
+    "DGML_cpu = dataset.map(DGML_compress_cpu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c56f76b4-64bb-4f29-93a5-015557de7211",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DGML_ds = DGML_ds.add_column('cpu_encode_time',DGML_cpu['cpu_encode_time'])\n",
+    "DGML_ds = DGML_ds.add_column('cpu_decode_time',DGML_cpu['cpu_decode_time'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d66f304-a2ab-4bed-bbe5-9928e2667fe6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DGML_ds.push_to_hub(\"danjacobellis/DGML_q6\",split='validation')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69c199aa-27d7-4e54-9fc1-c17e6ce9b2e1",
    "metadata": {},
    "outputs": [],
    "source": []
