--- a/inet-a/imagenet_a.ipynb
+++ b/inet-a/imagenet_a.ipynb
@@ -32,115 +32,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "331d92c9-8b5b-4942-9c8d-d84f084c7df4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import io\n",
+    "import PIL.Image\n",
+    "from datasets import Dataset, Image, get_dataset_config_info\n",
     "from glob import glob\n",
     "from classes import IMAGENET2012_CLASSES"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "67d2ddf7-4544-4ab4-ab8c-07718ef08448",
+   "execution_count": 2,
+   "id": "4e0a74c7-6858-42cf-b136-8361d17e73b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_to_index = {wnid: idx for idx, wnid in enumerate(IMAGENET2012_CLASSES.keys())}"
+    "id_to_index = {wnid: idx for idx, wnid in enumerate(IMAGENET2012_CLASSES.keys())}\n",
+    "config_info = get_dataset_config_info(\"imagenet-1k\",trust_remote_code=True)\n",
+    "label_feat = config_info.features['label']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "5e13535f-27ef-411d-85a1-f13613b2a0d6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "path = []\n",
+    "label = []\n",
     "for file in glob(\"imagenet-a/n*/*.[jJ]*\"):\n",
-    "    _, class_label, _ = file.split(\"/\")\n",
-    "    y = id_to_index.get(class_label)\n",
-    "    break"
+    "    _, wnid, _ = file.split(\"/\")\n",
+    "    label.append(id_to_index.get(wnid))\n",
+    "    path.append(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "bb219e4d-98c5-4f82-a527-f1f426788f0f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'feather boa, boa'"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "IMAGENET2012_CLASSES[class_label]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "bb9d83b5-da61-4a40-b527-7c30b9bbe6d5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "552"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "9c47a1cf-0e83-48d2-ba32-48e2efc6924d",
+   "execution_count": 4,
+   "id": "8a797ede-3dd6-4471-b827-da914ce53a03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset"
+    "def load_image(sample):\n",
+    "    with open(sample['path'], 'rb') as f:\n",
+    "        buff = io.BytesIO(f.read()).getbuffer()\n",
+    "    return {\n",
+    "        'image': buff\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "eceac4df-01ef-4d4d-8352-a5b79a080886",
+   "execution_count": 5,
+   "id": "4fb8fdcc-a18c-4a4d-a7f5-ca003f34f9ce",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dgj335/.local/lib/python3.10/site-packages/datasets/load.py:1486: FutureWarning: The repository for imagenet-1k contains custom code which must be executed to correctly load the dataset. You can inspect the repository content at https://hf.co/datasets/imagenet-1k\n",
-      "You can avoid this message in future by passing the argument `trust_remote_code=True`.\n",
-      "Passing `trust_remote_code=True` will be mandatory to load this dataset from the next major release of `datasets`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40891c57dcff43d3bceb22e2ea0564c8",
+       "model_id": "72d86b647d894fcfaeeae4ff7039b329",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Loading dataset shards:   0%|          | 0/257 [00:00<?, ?it/s]"
+       "Casting the dataset:   0%|          | 0/7500 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -149,12 +109,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9f6139f53264d2e994303f0dd8de506",
+       "model_id": "7d1cec8392c44b79a6548bfda0027b52",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Loading dataset shards:   0%|          | 0/25 [00:00<?, ?it/s]"
+       "Map:   0%|          | 0/7500 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -162,38 +122,104 @@
     }
    ],
    "source": [
-    "ds = load_dataset(\"imagenet-1k\")"
+    "ds = Dataset.from_dict({\n",
+    "    'path':path,\n",
+    "    'label':label,\n",
+    "})\n",
+    "ds = ds.cast_column('label', label_feat)\n",
+    "ds = ds.map(load_image)\n",
+    "ds = ds.cast_column('image', Image())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "6bd0029d-4ace-4160-9922-3863978c8474",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class_labels = ds['train'].features['label']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "d05c0a28-5acb-4b9e-b6e3-99add5c11345",
+   "execution_count": 6,
+   "id": "186b68a6-0e1c-4455-89fc-6fa9210fc41d",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ab06bfdebe843498ad61cafe0a9f51e",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "'feather boa, boa'"
+       "Uploading the dataset shards:   0%|          | 0/2 [00:00<?, ?it/s]"
       ]
      },
-     "execution_count": 53,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "38477148497842138540f572fbfe504c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/3750 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "abc3634a949d450bae79ecfe054cb8f9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/38 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bbda5006b04d4f5ab4a7004351d23cca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/3750 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a0d8349923204fc9a56d1d9f4e89fcf7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating parquet from Arrow format:   0%|          | 0/38 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/imagenet-a/commit/c6fdab0b640eb713485d95b5701a55b85d1bda88', commit_message='Upload dataset', commit_description='', oid='c6fdab0b640eb713485d95b5701a55b85d1bda88', pr_url=None, pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "class_labels.int2str(552)"
+    "ds.push_to_hub(\"danjacobellis/imagenet-a\",split='validation')"
    ]
   }
  ],
