--- a/RD/walloc_raspi.ipynb
+++ b/RD/walloc_raspi.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "07a4d392-f9b7-4d92-b656-a33ecffdf2d9",
    "metadata": {},
    "outputs": [
@@ -125,22 +125,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "12341537-a64f-48ea-a699-24997dcd7942",
+   "execution_count": 9,
+   "id": "ed2967f8-7b8f-4aab-8aca-164c7a061f2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.3567014932632446"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dataset.map("
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f68f1389-d84d-449c-b9dc-f251a1ee7c8f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "walloc_ds[28]['compressed']"
+    "np.median(walloc_ds['encode_time'])"
    ]
   }
  ],
