--- a/RD/walloc.ipynb
+++ b/RD/walloc.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://hf.co/danjacobellis/walloc/resolve/main/RGB_Li_27c_J3_nf8_v1.0.2.pth"
+    "!wget https://hf.co/danjacobellis/walloc/resolve/main/RGB_Li_108c_J4_nf8_v1.0.2.pth"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint = torch.load(\"RGB_Li_27c_J3_nf8_v1.0.2.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"RGB_Li_108c_J4_nf8_v1.0.2.pth\",map_location=\"cpu\",weights_only=False)\n",
     "codec_config = checkpoint['config']\n",
     "codec = walloc.Codec2D(\n",
     "    channels = codec_config.channels,\n",
@@ -167,7 +167,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acd56a181fe74f7aa3b0c16e57e063f3",
+       "model_id": "51276d08e40e45e1bbd98e65f7a733bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -226,10 +226,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "c5ddb0a9-70c7-46c4-b8bd-83aa7eb73268",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7189dd24dbc346b08b7ae594c322876f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/250 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "device = \"cpu\"\n",
     "codec = codec.to(device)\n",
@@ -240,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "e77d2fd0-f5b5-45b8-a386-65db975d376f",
    "metadata": {},
    "outputs": [],
@@ -260,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "d1baaf00-9378-40ab-95d0-ef8f3e1d9245",
    "metadata": {},
    "outputs": [
@@ -268,15 +283,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "encode_time: 0.052782036781311034\n",
-      "decode_time: 0.009165670394897461\n",
-      "bpp: 1.5698338992949727\n",
-      "PSNR: 30.708203132629393\n",
-      "MSSIM: 0.9853099465370179\n",
-      "LPIPS_dB: 8.869416903685487\n",
-      "DISTS_dB: 17.08312210869077\n",
-      "cpu_encode_time: 0.07879935741424561\n",
-      "cpu_decode_time: 2.8709406242370608\n"
+      "encode_time: 0.04028500270843506\n",
+      "decode_time: 0.007779269218444824\n",
+      "bpp: 1.8098697723274733\n",
+      "PSNR: 19.923473487854004\n",
+      "MSSIM: 0.7132813707590103\n",
+      "LPIPS_dB: 5.595655971344513\n",
+      "DISTS_dB: 13.51552325759242\n",
+      "cpu_encode_time: 0.07100857830047608\n",
+      "cpu_decode_time: 0.5731087617874145\n"
      ]
     }
    ],
@@ -285,6 +300,14 @@
     "    μ = np.mean(combined[metric])\n",
     "    print(f\"{metric}: {μ}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad3fa61c-2417-49e2-a894-90bd951b097c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
